--- a/presentation-intro.html
+++ b/presentation-intro.html
@@ -56,11 +56,13 @@
 <footer>Slides content adapted from the Programming course from the Casimir School</footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="8" data-paginate="true" data-footer="Slides content adapted from the Programming course from the Casimir School" data-theme="default" data-marpit-pagination="8" data-marpit-pagination-total="11" style="--paginate:true;--footer:Slides content adapted from the Programming course from the Casimir School;--theme:default;">
+<h2><em>Controlling the versions</em></h2>
 <ul>
 <li>Keeping track of changes in a systematic way.
 <ul>
 <li>having access to previous versions</li>
-<li>to know what was done</li>
+<li>in code: to know precisely which lines where changed in the code</li>
+<li>being able to come back to any working version</li>
 </ul>
 </li>
 </ul>
